# jml

./: .clang-format  .gitignore  CONTRIBUTING.md  README.md  meson.build
.github/workflows/: build-linux.yml  build-test.yml  format.yml
core/: meson.build
core/capi/: cjml.cpp  jml.h
core/include/jml/: jmldefs.h  logger.hpp  model.hpp  model.tpp
core/include/jml/internal/: logger.hpp
core/include/jml/math/: activation_functions.hpp  loss_functions.hpp  matrix.hpp  vector.hpp
core/internal/: logger.hpp
core/src/: logger.cpp  model.cpp  vector.cpp
core/src/math/: activation_functions.cpp  loss_functions.cpp  matrix.cpp  vector.cpp
scripts/: build.sh
tests/: core.cpp  meson.build
tests/core/: test_model.cpp
tests/core/math/: test_activation_functions.cpp  test_losses.cpp  test_matrix.cpp  test_vector.cpp
tests/math/: matrix.cpp
